chore: revert unnecessary import change